--- a/parcelas.html
+++ b/parcelas.html
@@ -7,9 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    
-</body>
-</html>
       <img src="../img/Credito.jpg" alt="Credito" class="normal">
       <h1>Cálculo das parcelas</h1>
       <form>
@@ -21,6 +18,9 @@
             </p>
             <input type="number" min="1" step="1" required>
         </form>
-        <pre    
+        <pre></pre>
+        <script src="Paecelas.js"></script>
+</body>
+</html>    
 
                  
